# ankio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/hooks/: .pre-commit-config.yaml
.github/hooks/workflows/: docker-build.yml
.github/workflows/: docker-build.yml
assistant/: .mcp.json  mcp.json
assistant/.claude-plugin/: plugin.json
assistant/skills/ankio/: SKILL.md
assistant/skills/ankio-feedback/: SKILL.md
assistant/skills/ankio-feedback/agents/: openai.yaml
assistant/skills/ankio-ingest/: SKILL.md
assistant/skills/ankio-ingest/agents/: openai.yaml
assistant/skills/ankio-quiz/: SKILL.md
assistant/skills/ankio-quiz/agents/: openai.yaml
src/: main.py
src/application/: app.py  dto.py
src/application/adapters/: core.py
src/application/services/: documents.py  notes.py  outbox.py  reviews.py
src/domain/: entity.py  event.py  value.py
src/infrastructure/: config.py
src/infrastructure/observability/: logger.py
src/infrastructure/persistence/: database.py  models.py  uow.py
src/infrastructure/persistence/repository/: documents.py  notes.py  outbox.py  review.py
src/presentation/api/: app.py
src/presentation/api/routes/: notes.py  reviews.py
src/presentation/cli/: app.py  claude.py  codex.py  common.py
src/presentation/htmx/: app.py
src/presentation/htmx/routes/: reviews.py  system.py
src/presentation/mcp/: app.py
src/presentation/worker/: app.py
src/utils/: time.py
tests/: test_cli_setup.py  test_document_observability.py
(+8 files in other folders)
